--- a/admin/index/welcome.html
+++ b/admin/index/welcome.html
@@ -40,22 +40,6 @@
                     </div>
                 </div>
             </div>
-            <!--<div class="h_panels chart-panel panel panel-default">
-                <div class="h_pad0 col-xs-12">
-                    <div class="clearfix">
-                        <div class="panel_title li_first_l2">
-                            <span class="li_first_left col-lg-11">专项&临时任务</span>
-                            <a href="javascrip:void(0);" class="h_more li_first_right col-lg-1" data-id="12">更多 &gt;&gt;</a>
-                        </div>
-                        <div class="panel_con" h_name="other_do">
-                            <ul>
-                                <li>暂无内容</li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </div>-->
-
         </div>
         <div class="welcome-right-container col-lg-4">
             <ul class="h_panels1">
@@ -86,19 +70,6 @@
                         </div>
                     </div>
                 </li>
-                <!--<li class="h_panels h_pad0 col-lg-12 col-sm-12 col-md-4 col-xs-12">
-                    <div class="clearfix">
-                        <div class="panel_title li_first">
-                            <span class="col-lg-9 li_first_left">系统消息</span>
-                            <a href="javascript:void(0);" class="h_more col-lg-3 li_first_right" data-id="17">更多 &gt;&gt;</a>
-                        </div>
-                        <div class="panel_con" h_name="sys_info">
-                            <ul>
-                                <li>暂无内容</li>
-                            </ul>
-                        </div>
-                    </div>
-                </li>-->
                 <li class="h_panels h_pad0 col-lg-12 col-sm-12 col-md-4 col-xs-12">
                     <div class="clearfix">
                         <div class="panel_title li_first">
@@ -330,61 +301,61 @@
                     },
                     {
                         "item": "通知公告2",
-                        "src": "#",
+                        "src": "./table.html",
                         "time": "2018-04-12"
                     },
                     {
                         "item": "通知公告3",
-                        "src": "#",
+                        "src": "./table.html",
                         "time": "2018-04-12"
                     }
                 ],
                 [
                     {
                         "item": "通知公告22",
-                        "src": "#",
+                        "src": "./table.html",
                         "time": "2018-04-12"
                     },
                     {
                         "item": "通知公告222",
-                        "src": "#",
+                        "src": "./table.html",
                         "time": "2018-04-12"
                     },
                     {
                         "item": "通知公告223",
-                        "src": "#",
+                        "src": "./table.html",
                         "time": "2018-04-12"
                     }
                 ],
                 [
                     {
                         "item": "通知公告33",
-                        "src": "#",
+                        "src": "./table.html",
                         "time": "2018-04-12"
                     },
                     {
                         "item": "通知公告332",
-                        "src": "#",
+                        "src": "./table.html",
                         "time": "2018-04-12"
                     },
                     {
                         "item": "通知公告333",
-                        "src": "#",
+                        "src": "./table.html",
                         "time": "2018-04-12"
                     },
                     {
                         "item": "通知公告33",
-                        "src": "#",
+                        "src": "./table.html",
                         "time": "2018-04-12"
                     },
                     {
                         "item": "通知公告332",
-                        "src": "#",
+                        "src": "./table.html",
                         "time": "2018-04-12"
                     },
                     {
                         "item": "通知公告333",
-                        "src": "#",
+                        "src": "./table.html",
                         "time": "2018-04-12"
                     }
                 ]
@@ -399,46 +370,46 @@
                     },
                     {
                         "item": "通知公告2",
-                        "src": "#",
+                        "src": "./table.html",
                         "time": "2018-04-12"
                     },
                     {
                         "item": "通知公告3",
-                        "src": "#",
+                        "src": "./table.html",
                         "time": "2018-04-12"
                     }
                 ],
                 [
                     {
                         "item": "通知公告22",
-                        "src": "#",
+                        "src": "./table.html",
                         "time": "2018-04-12"
                     },
                     {
                         "item": "通知公告222",
-                        "src": "#",
+                        "src": "./table.html",
                         "time": "2018-04-12"
                     },
                     {
                         "item": "通知公告223",
-                        "src": "#",
+                        "src": "./table.html",
                         "time": "2018-04-12"
                     }
                 ],
                 [
                     {
                         "item": "通知公告33",
-                        "src": "#",
+                        "src": "./table.html",
                         "time": "2018-04-12"
                     },
                     {
                         "item": "通知公告332",
-                        "src": "#",
+                        "src": "./table.html",
                         "time": "2018-04-12"
                     },
                     {
                         "item": "通知公告333",
-                        "src": "#",
+                        "src": "./table.html",
                         "time": "2018-04-12"
                     }
                 ]
