--- a/admin/index/data/network-sys/equip_overtime.html
+++ b/admin/index/data/network-sys/equip_overtime.html
@@ -57,7 +57,7 @@
             , cols: [[ //表头
                   {type:"checkbox"}
                 , {field: 'equip_number', title: '设备编号', minWidth: 150, sort: true}
-                , {field: 'equip_short', title: '设备简称',width:"35%", minWidth: 150}
+                , {field: 'equip_short', title: '设备简称', minWidth: 150}
                 , {field: 'overtime_bdate', title: '加班开始日期', minWidth: 150}
                 , {field: 'overtime_edate', title: '加班结束日期', minWidth: 150, sort: true}
                 , {field: 'overtime_btime', title: '加班开始时间', minWidth: 150, sort: true}
@@ -66,62 +66,54 @@
             ]]
             , "data": [
                 {
-                    "announce_type": '100001000065456465',
-                    "link": "./show_messages.html",
-                    "announce_name": "9999999999999999999",
-                    "Release_department": "user-0",
-                    "Release_date": "女",
-                    "cut_date": "城市-0",
-                    "messages": [
-                        {
-                            name: "流程名称",
-                            value: "某一个活动1111"
-                        },
-                        {
-                            name: "创建日期",
-                            value: "2018-11-23 21：34:00"
-                        }
-                    ]
-                },{
-                    "announce_type": '100001000010000100001000010001001000010000100001000065456465',
-                    "announce_name": "user-0",
-                    "Release_department": "user-0",
-                    "Release_date": "女",
-                    "cut_date": "城市-0",
-                    "messages": [
-                        {
-                            name: "流程名称",
-                            value: "某一个活动222222"
-                        },
-                        {
-                            name: "创建日期",
-                            value: "2018-11-23 21：34:00"
-                        }
-                    ]
-                }]
+                    "equip_number": '100001000065456465',
+                    "equip_short": "CT",
+                    "overtime_bdate": "2018-12-01",
+                    "overtime_edate": "2019-12-01",
+                    "overtime_btime": "17:00:00",
+                    "overtime_etime": "24:00:00"
+                },
+                {
+                    "equip_number": '100001000065456465',
+                    "equip_short": "CT",
+                    "overtime_bdate": "2018-12-01",
+                    "overtime_edate": "2019-12-01",
+                    "overtime_btime": "17:00:00",
+                    "overtime_etime": "24:00:00"
+                },
+                {
+                    "equip_number": '100001000065456465',
+                    "equip_short": "CT",
+                    "overtime_bdate": "2018-12-01",
+                    "overtime_edate": "2019-12-01",
+                    "overtime_btime": "17:00:00",
+                    "overtime_etime": "24:00:00"
+                },
+                {
+                    "equip_number": '100001000065456465',
+                    "equip_short": "CT",
+                    "overtime_bdate": "2018-12-01",
+                    "overtime_edate": "2019-12-01",
+                    "overtime_btime": "17:00:00",
+                    "overtime_etime": "24:00:00"
+                },
+                {
+                    "equip_number": '100001000065456465',
+                    "equip_short": "CT",
+                    "overtime_bdate": "2018-12-01",
+                    "overtime_edate": "2019-12-01",
+                    "overtime_btime": "17:00:00",
+                    "overtime_etime": "24:00:00"
+                }
+            ]
             ,
             text: {
                 none: "暂时还没有数据哦！"
             }, done: function (obj) {
-                //参数1：第几列信息展示message信息,当小于0时则不显示message信息 参数2：保持默认，传输表格数据
-                addTableMessage(2,obj);//第二列显示message信息
+                //frame_all({"check":obj},{"back":true},{"link":[obj,"table1"]},{"message":[2,obj]});//公共运行函数集合
             }
         });
-        frame_all({"back":true});//框架公共运行函数
-        //监听行单击事件
-        table.on('tool(table1)', function (obj) {
-            var data = obj.data;
-            if (obj.event === "openLink") {
-                    layer.confirm("确定跳转链接吗？", function () {
-                        if(data.link){
-                            location.href = data.link +"?link="+ encodeURIComponent(window.location.href);
-                        }else{
-                            layer.alert("没有可以跳转的链接哦！")
-                        }
-                    });
 
-            }
-        });
     });
 </script>
 </body>
