--- a/admin/index/data/network-sys/room_record.html
+++ b/admin/index/data/network-sys/room_record.html
@@ -66,65 +66,31 @@
             , cols: [[ //表头
                  {field: 'process_name', title: '科室', minWidth: 150, sort: true}
                 , {field: 'create_date', title: '台数', minWidth: 150, sort: true}
-                , {field: 'Service_monitoring', title: '工作时长', minWidth: 150, sort: true}
-                , {field: 'Service_monitoring', title: '待机时长', minWidth: 150, sort: true}
+                , {field: 'work_long', title: '工作时长', minWidth: 150, sort: true}
+                , {field: 'stand_long', title: '待机时长', minWidth: 150, sort: true}
             ]]
             , "data": [
                 {
-                    "announce_type": '100001000065456465',
-                    "link": "./show_messages.html",
-                    "announce_name": "9999999999999999999",
-                    "Release_department": "user-0",
-                    "Release_date": "女",
-                    "cut_date": "城市-0",
-                    "messages": [
-                        {
-                            name: "流程名称",
-                            value: "某一个活动1111"
-                        },
-                        {
-                            name: "创建日期",
-                            value: "2018-11-23 21：34:00"
-                        }
-                    ]
+                    "process_name": 'CT室',
+                    "create_date": "3",
+                    "work_long": "10H",
+                    "stand_long": "15H"
                 },{
-                    "announce_type": '100001000010000100001000010001001000010000100001000065456465',
-                    "announce_name": "user-0",
-                    "Release_department": "user-0",
-                    "Release_date": "女",
-                    "cut_date": "城市-0",
-                    "messages": [
-                        {
-                            name: "流程名称",
-                            value: "某一个活动222222"
-                        },
-                        {
-                            name: "创建日期",
-                            value: "2018-11-23 21：34:00"
-                        }
-                    ]
+                    "process_name": 'CT室',
+                    "create_date": "3",
+                    "work_long": "10H",
+                    "stand_long": "15H"
+                },{
+                    "process_name": 'CT室',
+                    "create_date": "3",
+                    "work_long": "10H",
+                    "stand_long": "15H"
                 }]
             ,
             text: {
                 none: "暂时还没有数据哦！"
             }, done: function (obj) {
-                //参数1：第几列信息展示message信息,当小于0时则不显示message信息 参数2：保持默认，传输表格数据
-                addTableMessage(2,obj);//第二列显示message信息
-            }
-        });
-        frame_all({"back":true});//框架公共运行函数
-        //监听行单击事件
-        table.on('tool(table1)', function (obj) {
-            var data = obj.data;
-            if (obj.event === "openLink") {
-                    layer.confirm("确定跳转链接吗？", function () {
-                        if(data.link){
-                            location.href = data.link +"?link="+ encodeURIComponent(window.location.href);
-                        }else{
-                            layer.alert("没有可以跳转的链接哦！")
-                        }
-                    });
-
+                //frame_all({"check":obj},{"back":true},{"link":[obj,"table1"]},{"message":[2,obj]});//公共运行函数集合
             }
         });
     });
