--- a/admin/index/data/network-sys/run_record.html
+++ b/admin/index/data/network-sys/run_record.html
@@ -65,71 +65,55 @@
                   {type:"checkbox"}
                 , {field: 'equip_room', title: '所在科室', minWidth: 150, sort: true}
                 , {field: 'equip_number', title: '设备编号', minWidth: 150, sort: true}
-                , {field: 'equip_short', title: '资产编号', minWidth: 150}
-                , {field: 'overtime_bdate', title: '设备名称', minWidth: 150}
-                , {field: 'overtime_edate', title: '联网仪编号', minWidth: 150, sort: true}
-                , {field: 'overtime_btime', title: '状态标识', minWidth: 150, sort: true}
-                , {field: 'overtime_etime', title: '状态名称', minWidth: 150, sort: true}
-                , {field: 'overtime_edate', title: '收包时间', minWidth: 150, sort: true}
-                , {field: 'overtime_btime', title: '开始时间', minWidth: 150, sort: true}
-                , {field: 'overtime_etime', title: '结束时间', minWidth: 150, sort: true}
+                , {field: 'assets_number', title: '资产编号', minWidth: 150}
+                , {field: 'equip_name', title: '设备名称', minWidth: 150}
+                , {field: 'netequip_number', title: '联网仪编号', minWidth: 150, sort: true}
+                , {field: 'state_id', title: '状态标识', minWidth: 150, sort: true}
+                , {field: 'state_name', title: '状态名称', minWidth: 150, sort: true}
+                , {field: 'receive_time', title: '收包时间', minWidth: 150, sort: true}
+                , {field: 'begin_time', title: '开始时间', minWidth: 150, sort: true}
+                , {field: 'end_time', title: '结束时间', minWidth: 150, sort: true}
             ]]
             , "data": [
                 {
-                    "announce_type": '100001000065456465',
-                    "link": "./show_messages.html",
-                    "announce_name": "9999999999999999999",
-                    "Release_department": "user-0",
-                    "Release_date": "女",
-                    "cut_date": "城市-0",
-                    "messages": [
-                        {
-                            name: "流程名称",
-                            value: "某一个活动1111"
-                        },
-                        {
-                            name: "创建日期",
-                            value: "2018-11-23 21：34:00"
-                        }
-                    ]
+                    "equip_room": 'CT室',
+                    "equip_number": "9275638863",
+                    "assets_number": "99999999",
+                    "equip_name": "CT机",
+                    "netequip_number": "62758382",
+                    "state_id": "normal",
+                    "state_name": "正常",
+                    "receive_time": "2018-12-05",
+                    "begin_time": "2018-12-01",
+                    "end_time": "2019-01-01"
                 },{
-                    "announce_type": '100001000010000100001000010001001000010000100001000065456465',
-                    "announce_name": "user-0",
-                    "Release_department": "user-0",
-                    "Release_date": "女",
-                    "cut_date": "城市-0",
-                    "messages": [
-                        {
-                            name: "流程名称",
-                            value: "某一个活动222222"
-                        },
-                        {
-                            name: "创建日期",
-                            value: "2018-11-23 21：34:00"
-                        }
-                    ]
+                    "equip_room": 'CT室',
+                    "equip_number": "9275638863",
+                    "assets_number": "99999999",
+                    "equip_name": "CT机",
+                    "netequip_number": "62758382",
+                    "state_id": "normal",
+                    "state_name": "正常",
+                    "receive_time": "2018-12-05",
+                    "begin_time": "2018-12-01",
+                    "end_time": "2019-01-01"
+                },{
+                    "equip_room": 'CT室',
+                    "equip_number": "9275638863",
+                    "assets_number": "99999999",
+                    "equip_name": "CT机",
+                    "netequip_number": "62758382",
+                    "state_id": "normal",
+                    "state_name": "正常",
+                    "receive_time": "2018-12-05",
+                    "begin_time": "2018-12-01",
+                    "end_time": "2019-01-01"
                 }]
             ,
             text: {
                 none: "暂时还没有数据哦！"
             }, done: function (obj) {
-                //参数1：第几列信息展示message信息,当小于0时则不显示message信息 参数2：保持默认，传输表格数据
-                addTableMessage(2,obj);//第二列显示message信息
-            }
-        });
-        frame_all({"back":true});//框架公共运行函数
-        //监听行单击事件
-        table.on('tool(table1)', function (obj) {
-            var data = obj.data;
-            if (obj.event === "openLink") {
-                    layer.confirm("确定跳转链接吗？", function () {
-                        if(data.link){
-                            location.href = data.link +"?link="+ encodeURIComponent(window.location.href);
-                        }else{
-                            layer.alert("没有可以跳转的链接哦！")
-                        }
-                    });
-
+                //frame_all({"check":obj},{"back":true},{"link":[obj,"table1"]},{"message":[2,obj]});//公共运行函数集合
             }
         });
     });
