--- a/admin/index/home/my_task.html
+++ b/admin/index/home/my_task.html
@@ -47,67 +47,52 @@
             , minWidth: 1200
             , cols: [[ //表头
                  {field: 'process_name', title: '任务名称',width:"50%", minWidth: 150}
-                , {field: 'create_date', title: '任务来源', minWidth: 150}
-                , {field: 'Service_monitoring', title: '安排日期', minWidth: 150, sort: true}
-                , {field: 'Service_monitoring', title: '指定接受人', minWidth: 150, sort: true}
-                , {field: 'Service_monitoring', title: '状态', minWidth: 150, sort: true}
+                , {field: 'process_form', title: '任务来源', minWidth: 150}
+                , {field: 'process_date', title: '安排日期', minWidth: 150, sort: true}
+                , {field: 'guide_personal', title: '指定接受人', minWidth: 150, sort: true}
+                , {field: 'state', title: '状态', minWidth: 150, sort: true}
                 , {fixed:'right',minWidth: 100,align:'center',toolbar: "#bar"}
             ]]
             , "data": [
                 {
-                    "announce_type": '100001000065456465',
-                    "link": "./show_messages.html",
-                    "announce_name": "9999999999999999999",
-                    "Release_department": "user-0",
-                    "Release_date": "女",
-                    "cut_date": "城市-0",
-                    "messages": [
-                        {
-                            name: "流程名称",
-                            value: "某一个活动1111"
-                        },
-                        {
-                            name: "创建日期",
-                            value: "2018-11-23 21：34:00"
-                        }
-                    ]
-                },{
-                    "announce_type": '100001000010000100001000010001001000010000100001000065456465',
-                    "announce_name": "user-0",
-                    "Release_department": "user-0",
-                    "Release_date": "女",
-                    "cut_date": "城市-0",
-                    "messages": [
-                        {
-                            name: "流程名称",
-                            value: "某一个活动222222"
-                        },
-                        {
-                            name: "创建日期",
-                            value: "2018-11-23 21：34:00"
-                        }
-                    ]
+                    "process_name": '任务1',
+                    "process_form": "直接下发",
+                    "process_date": "2018-12-01",
+                    "guide_personal": "陈某某",
+                    "state": "良好"
+                },
+                {
+                    "process_name": '任务1',
+                    "process_form": "直接下发",
+                    "process_date": "2018-12-01",
+                    "guide_personal": "陈某某",
+                    "state": "良好"
+                },
+                {
+                    "process_name": '任务1',
+                    "process_form": "直接下发",
+                    "process_date": "2018-12-01",
+                    "guide_personal": "陈某某",
+                    "state": "良好"
+                },
+                {
+                    "process_name": '任务1',
+                    "process_form": "直接下发",
+                    "process_date": "2018-12-01",
+                    "guide_personal": "陈某某",
+                    "state": "良好"
+                },
+                {
+                    "process_name": '任务1',
+                    "process_form": "直接下发",
+                    "process_date": "2018-12-01",
+                    "guide_personal": "陈某某",
+                    "state": "良好"
                 }]
             ,
             text: {
                 none: "暂时还没有数据哦！"
             }, done: function (obj) {
-                //参数1：第几列信息展示message信息,当小于0时则不显示message信息 参数2：保持默认，传输表格数据
-                addTableMessage(2,obj);//第二列显示message信息
-            }
-        });
-        frame_all({"back":true});//框架公共运行函数
-        //监听行单击事件
-        table.on('tool(table1)', function (obj) {
-            var data = obj.data;
-            if (obj.event === "openLink") {
-                    layer.confirm("确定跳转链接吗？", function () {
-                        if(data.link){
-                            location.href = data.link +"?link="+ encodeURIComponent(window.location.href);
-                        }else{
-                            layer.alert("没有可以跳转的链接哦！")
-                        }
-                    });
 
             }
         });
