--- a/admin/index/home/public_info.html
+++ b/admin/index/home/public_info.html
@@ -48,67 +48,52 @@
             , cols: [[ //表头
                 {type:"checkbox"}
                 , {field: 'process_name', title: '文档名称',width:"50%", minWidth: 150}
-                , {field: 'create_date', title: '上传人', minWidth: 150, sort: true}
+                , {field: 'up_personal', title: '上传人', minWidth: 150, sort: true}
                 , {field: 'Service_monitoring', title: '上传日期', minWidth: 150}
             ]]
             ,
             "data": [
                 {
-                    "activity_name": '100001000010000100001000010001001000010000100001000065456465',
-                    "link": "https://www.baidu.com",
-                    "process_name": "user-0",
-                    "create_date": "user-0",
-                    "Service_monitoring": "女",
-                    "cut_date": "城市-0",
-                    "messages": [
-                        {
-                            name: "流程名称",
-                            value: "某一个活动"
-                        },
-                        {
-                            name: "创建日期",
-                            value: "2018-11-23 21：34:00"
-                        }
-                    ]
-                }, {
-                    "activity_name": 10000,
-                    "process_name": "user-0",
-                    "link": "./show_messages.html",
-                    "Service_monitoring": "女",
-                    "create_date": "城市-0",
-                    "cut_date": "城市-0"
-                },
-                {
-                    "activity_name": 10000,
-                    "process_name": "user-0",
-                    "Service_monitoring": "女",
-                    "create_date": "城市-0",
-                    "cut_date": "城市-0"
-                },
-                {
-                    "activity_name": 10000,
-                    "process_name": "user-0",
-                    "Service_monitoring": "女",
-                    "create_date": "城市-0",
-                    "cut_date": "城市-0"
+                    "process_name": '文件1',
+                    "up_personal": "用户1",
+                    "Service_monitoring": "2018-12-01"
+                },{
+                    "process_name": '文件1',
+                    "up_personal": "用户2",
+                    "Service_monitoring": "2018-12-01"
+                },{
+                    "process_name": '文件1',
+                    "up_personal": "用户2",
+                    "Service_monitoring": "2018-12-01"
+                },{
+                    "process_name": '文件1',
+                    "up_personal": "用户2",
+                    "Service_monitoring": "2018-12-01"
+                },{
+                    "process_name": '文件1',
+                    "up_personal": "用户2",
+                    "Service_monitoring": "2018-12-01"
+                },{
+                    "process_name": '文件1',
+                    "up_personal": "用户2",
+                    "Service_monitoring": "2018-12-01"
+                },{
+                    "process_name": '文件1',
+                    "up_personal": "用户2",
+                    "Service_monitoring": "2018-12-01"
+                },{
+                    "process_name": '文件1',
+                    "up_personal": "用户2",
+                    "Service_monitoring": "2018-12-01"
                 }]
             ,
             text: {
                 none: "暂时还没有数据哦！"
             }, done: function (obj) {
-                //参数1：第几列信息展示message信息,当小于0时则不显示message信息 参数2：保持默认，传输表格数据
-                addTableMessage(1, obj, 600, "200");//第一列显示message信息
+
             }
         });
-        //监听行单击事件
-        table.on('tool(table1)', function (obj) {
-            if (obj.event === "openLink") {
-                layer.confirm("确定跳转链接吗？", function () {
-                    window.location.href = obj.data.link;//+"?link="+ encodeURIComponent(window.location.href)
-                });
-            }
-        });
-        frame_all({"back": false});//框架公共运行函数
+
 
     });
 </script>
