--- a/admin/index/home/remind.html
+++ b/admin/index/home/remind.html
@@ -65,49 +65,34 @@
                 , {field: 'process_name', title: '提醒类别', minWidth: 150}
                 , {field: 'create_date', title: '提醒信息',width:"50%", minWidth: 150, sort: true}
                 , {field: 'Service_monitoring', title: '截止日期', minWidth: 150}
-                , {field: 'Service_monitoring', title: '累计提醒(次)', minWidth: 150}
-                , {field: 'Service_monitoring', title: '末次提醒', minWidth: 150}
+                , {field: 'remind_times', title: '累计提醒(次)', minWidth: 150}
+                , {field: 'remind_end', title: '末次提醒', minWidth: 150}
             ]]
             ,
             "data": [
                 {
                     "activity_name": '100001000010000100001000010001001000010000100001000065456465',
-                    "link": "https://www.baidu.com",
+                    "remind_end": "2018-11-25",
                     "process_name": "user-0",
                     "create_date": "user-0",
-                    "Service_monitoring": "女",
-                    "cut_date": "城市-0",
-                    "messages": [
-                        {
-                            name: "流程名称",
-                            value: "某一个活动"
-                        },
-                        {
-                            name: "创建日期",
-                            value: "2018-11-23 21：34:00"
-                        }
-                    ]
-                }, {
-                    "activity_name": 10000,
-                    "process_name": "user-0",
-                    "link": "./show_messages.html",
-                    "Service_monitoring": "女",
-                    "create_date": "城市-0",
-                    "cut_date": "城市-0"
+                    "Service_monitoring": "2018-12-01",
+                    "remind_times": "7"
                 },
                 {
-                    "activity_name": 10000,
+                    "activity_name": '100001000010000100001000010001001000010000100001000065456465',
+                    "remind_end": "2018-11-25",
                     "process_name": "user-0",
-                    "Service_monitoring": "女",
-                    "create_date": "城市-0",
-                    "cut_date": "城市-0"
+                    "create_date": "user-0",
+                    "Service_monitoring": "2018-12-01",
+                    "remind_times": "7"
                 },
                 {
-                    "activity_name": 10000,
+                    "activity_name": '100001000010000100001000010001001000010000100001000065456465',
+                    "remind_end": "2018-11-25",
                     "process_name": "user-0",
-                    "Service_monitoring": "女",
-                    "create_date": "城市-0",
-                    "cut_date": "城市-0"
+                    "create_date": "user-0",
+                    "Service_monitoring": "2018-12-01",
+                    "remind_times": "7"
                 }]
             ,
             text: {
@@ -134,7 +119,7 @@
                     "link": "https://www.baidu.com",
                     "process_name": "user-0",
                     "create_date": "user-0",
-                    "Service_monitoring": "女",
+                    "Service_monitoring": "2018-12-01",
                     "cut_date": "城市-0",
                     "messages": [
                         {
@@ -150,21 +135,21 @@
                     "activity_name": 10000,
                     "process_name": "user-0",
                     "link": "./show_messages.html",
-                    "Service_monitoring": "女",
+                    "Service_monitoring": "2018-12-01",
                     "create_date": "城市-0",
                     "cut_date": "城市-0"
                 },
                 {
                     "activity_name": 10000,
                     "process_name": "user-0",
-                    "Service_monitoring": "女",
+                    "Service_monitoring": "2018-12-01",
                     "create_date": "城市-0",
                     "cut_date": "城市-0"
                 },
                 {
                     "activity_name": 10000,
                     "process_name": "user-0",
-                    "Service_monitoring": "女",
+                    "Service_monitoring": "2018-12-01",
                     "create_date": "城市-0",
                     "cut_date": "城市-0"
                 }]
@@ -174,7 +159,7 @@
             }
         });
 
-        frame_all({"back": false});//框架公共运行函数
+        //frame_all({"back": false});//框架公共运行函数
 
     });
 </script>
