--- a/admin/index/index.html
+++ b/admin/index/index.html
@@ -5,7 +5,7 @@
     <meta name="renderer" content="webkit">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no"/>
-    <title>健龙世纪管理中心</title>
+    <title>医疗设备智能管理系统</title>
     <link rel="stylesheet" type="text/css" href="../../static/admin/layui/css/layui.css"/>
     <link rel="stylesheet" type="text/css" href="../../static/admin/css/admin.css"/>
     <link rel="stylesheet" href="../../static/admin/css/all.min.css"/>
