--- a/admin/index/system/user-management/role-setting.html
+++ b/admin/index/system/user-management/role-setting.html
@@ -4,18 +4,17 @@
     <meta charset="UTF-8">
     <meta name="renderer" content="webkit">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="viewport"
-          content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no"/>
+    <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no"/>
     <title>角色设置</title>
     <link rel="stylesheet" type="text/css" href="../../../../static/admin/layui/css/layui.css"/>
     <link rel="stylesheet" type="text/css" href="../../../../static/admin/css/admin.css"/>
     <script src="../../../../static/admin/js/jquery-3.3.1.min.js"></script>
-    <style type="text/css">
-
-    </style>
+    <!--[if IE 8]>
+    <script type="text/javascript" src="../../../../static/admin/js/jquery-1.11.3.min.js"></script>
+    <![endif]-->
+    <script src="../../../../static/admin/js/basic.js"></script
 </head>
 <body>
-
 <div class="layui-row">
     <div class="col-xs-12">
         <table id="table_basic" lay-filter="basic"></table>
@@ -27,8 +26,8 @@
 </script>
 
 <script type="text/html" id="toolBar">
-    <form class="layui-form">
-        <div class="test-table-reload-btn  h_tool" style="line-height:60px">
+    <form class="layui-form hidden-xs">
+        <div class="test-table-reload-btn  h_tool">
             角色工号查找：
             <div class="layui-inline">
                 <select name="classify" lay-verify="">
@@ -46,8 +45,6 @@
         </div>
     </form>
 </script>
-
-
 <script src="../../../../static/admin/layui/layui.js" type="text/javascript" charset="utf-8"></script>
 <script>
     layui.use('table',function(){
@@ -61,15 +58,11 @@
             ,minWidth:1000
             ,toolbar:'#toolBar'
             ,cols: [[ //表头
-                {checkbox:true,fixed:true,width:100}
-                ,
-                {field: 'job-number', title: '工号', width: 150}
-                ,
-                {field:'name',title:'用户名',width:300}
-                ,
-                {field:'role',title:'角色',minWidth:300}
-                ,
-                {title:'操作',toolbar:'#barDemo',width:150}
+                {checkbox:true,fixed:true}
+                , {field: 'job-number', title: '工号', width: 150}
+                , {field:'name',title:'用户名',width:300}
+                , {field:'role',title:'角色',minWidth:300}
+                , {title:'操作',toolbar:'#barDemo',width:150}
             ]]
             , "data": [
                 {
