--- a/admin/index/system/user-management/user-setting.html
+++ b/admin/index/system/user-management/user-setting.html
@@ -4,31 +4,24 @@
     <meta charset="UTF-8">
     <meta name="renderer" content="webkit">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="viewport"
-          content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no"/>
+    <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no"/>
     <title>用户设置</title>
     <link rel="stylesheet" type="text/css" href="../../../../static/admin/layui/css/layui.css"/>
     <link rel="stylesheet" type="text/css" href="../../../../static/admin/css/admin.css"/>
     <script src="../../../../static/admin/js/jquery-3.3.1.min.js"></script>
-    <style type="text/css">
-
-    </style>
 </head>
 <body>
-
 <div class="layui-row">
     <div class="col-xs-12">
         <table id="table_basic" lay-filter="basic"></table>
     </div>
 </div>
-
 <script type="text/html" id="barDemo">
     <a class="layui-btn layui-btn-xs" lay-event="edit">编辑</a>
 </script>
-
 <script type="text/html" id="toolBar">
-    <form class="layui-form">
-        <div class="test-table-reload-btn  h_tool" style="line-height:60px">
+    <form class="layui-form hidden-xs">
+        <div class="test-table-reload-btn  h_tool">
             部门工号查找：
             <div class="layui-inline">
                 <select name="classify" lay-verify="">
@@ -61,19 +54,13 @@
             ,minWidth:1000
             ,toolbar:'#toolBar'
             ,cols: [[ //表头
-                {checkbox:true,fixed:true,width:100}
-                ,
-                {field: 'division', title: '部门', minWidth: 200}
-                ,
-                {field: 'job-number', title: '工号', minWidth: 150}
-                ,
-                {field:'name',title:'姓名',minWidth:150}
-                ,
-                {field:'tel-number',title:'手机号码',minWidth:150}
-                ,
-                {field:'email',title:'电子邮箱'}
-                ,
-                {title:'操作',toolbar:'#barDemo',width:150}
+                {checkbox:true,fixed:true}
+                , {field: 'division', title: '部门', minWidth: 200}
+                , {field: 'job-number', title: '工号', minWidth: 150}
+                , {field:'name',title:'姓名',minWidth:150}
+                , {field:'tel-number',title:'手机号码',minWidth:150}
+                , {field:'email',title:'电子邮箱'}
+                , {title:'操作',toolbar:'#barDemo',width:150,align:"center"}
             ]]
             , "data": [
                 {
